package ch.iet_gibb.oecoheat.interfaces;

/**
 * The ControllerViewInterface interface represents the interface for a controller view.
 * The interface defines a method to start the view with a tank model.
 *
 * @author Marjan Tomev
 * @version 1.0
 * @since 08.29.2024
 */
public interface ControllerViewInterface {
    void startView(TankModel data);
}
