@startuml
interface ch.iet_gibb.oecoheat.interfaces.TankModel {
~ List<Property> getProperties()
}

class ch.iet_gibb.oecoheat.models.Property {
# String key
# String value
+ String getKey()
+ String getValue()
}


class ch.iet_gibb.oecoheat.models.CuboidTank {
# double width
# double height
# double depth
+ List<Property> getProperties()
+ double calculateVolume()
+ double calculateStoredEnergy()
+ double calculateHeatingDays()
+ String getLabel()
+ String toString()
}


class ch.iet_gibb.oecoheat.models.CylinderTank {
# double radius
# double height
+ List<Property> getProperties()
+ double calculateVolume()
+ double calculateStoredEnergy()
+ double calculateHeatingDays()
+ String getLabel()
+ String toString()
}


abstract class ch.iet_gibb.oecoheat.models.Tank {
# String name
# double temperature
# double heatedEnergyPerDay
+ List<Property> getProperties()
+ {abstract}double calculateStoredEnergy()
+ {abstract}double calculateHeatingDays()
+ {abstract}double calculateVolume()
+ {abstract}String getLabel()
+ String toString()
}


class ch.iet_gibb.oecoheat.TankApplication {
+ void start(Stage)
- List<TankModel> createSampleTanks()
+ {static} void main(String[])
}

class ch.iet_gibb.oecoheat.controllers.TankController {
# List<TankModel> tanks
- int currentTankIndex
# ControllerViewInterface view
# Stage stage
+ void setView(ControllerViewInterface)
+ void startView()
+ void handle(ActionEvent)
- void showNextTank()
+ void switchToAlternativeView()
+ void switchToNormalView()
}


class ch.iet_gibb.oecoheat.views.AlternativeTankView {
# Stage stage
# VBox layout
# VBox propertiesLayout
# Button nextTankButton
# Button backToNormalViewButton
+ void updateView(List<Property>)
+ void startView(TankModel)
}


class ch.iet_gibb.oecoheat.views.TankView {
# Stage stage
# VBox layout
# VBox propertiesLayout
# Button nextTankButton
# Button alternativeViewButton
+ void updateView(List<Property>)
+ void startView(TankModel)
}


interface ch.iet_gibb.oecoheat.interfaces.ControllerViewInterface {
~ void startView(TankModel)
}



ch.iet_gibb.oecoheat.models.Tank <|-- ch.iet_gibb.oecoheat.models.CuboidTank
ch.iet_gibb.oecoheat.models.Tank <|-- ch.iet_gibb.oecoheat.models.CylinderTank
ch.iet_gibb.oecoheat.interfaces.TankModel <|.. ch.iet_gibb.oecoheat.models.Tank
javafx.application.Application <|-- ch.iet_gibb.oecoheat.TankApplication
javafx.event.EventHandler <|.. ch.iet_gibb.oecoheat.controllers.TankController
ch.iet_gibb.oecoheat.interfaces.ControllerViewInterface <|.. ch.iet_gibb.oecoheat.views.AlternativeTankView
ch.iet_gibb.oecoheat.interfaces.ControllerViewInterface <|.. ch.iet_gibb.oecoheat.views.TankView
@enduml